force-app/main/default/objects/Time__c/Time__c.object-meta.xml
<CustomObject>
    <description>An entry of project time in the timekeeping system</description>
    <label>Time</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Time Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>