force-app/main/default/objects/Time__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>/*Project_Task__r.Project__r.Account__r.AccountStatus2__c*/

Project_Task__r.Project__r.Account__r.Account_Status__c</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>