force-app/main/default/objects/Time__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_Activity__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Activity</valueSetName>
    </valueSet>
</CustomField>