force-app/main/default/objects/Time__c/fields/Activity_Price_Agreement2__c.field-meta.xml
<CustomField>
    <fullName>Activity_Price_Agreement2__c</fullName>
    <formula>TEXT( Activity_Price_Agreement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Price Agreement2</label>
    <type>Text</type>
</CustomField>