force-app/main/default/objects/Time__c/fields/Activity_Price_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Activity_Price_Agreement__c</fullName>
    <label>Activity Price Agreement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly Rate</fullName>
                <default>true</default>
                <label>Hourly Rate</label>
            </value>
            <value>
                <fullName>Unit Price</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>