force-app/main/default/objects/Time__c/fields/Billable_Customer_Time__c.field-meta.xml
<CustomField>
    <fullName>Billable_Customer_Time__c</fullName>
    <formula>IF(

(TEXT(Main_Activity__c)=&quot;Internal&quot;) || (Text(Main_Activity__c)=&quot;Interntid&quot;), 0,


IF

(Text(Activity_Price_Agreement__c) =&quot;Hourly Rate&quot;, Billable_Time__c , 




((((Registered_Time__c)-(Billable_Time__c))*(BU__c)/100)+Billable_Time__c)



)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Customer Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>