force-app/main/default/objects/Time__c/fields/Billable_Time__c.field-meta.xml
<CustomField>
    <fullName>Billable_Time__c</fullName>
    <formula>Billable_Hours__c + ( Billable_Minutes__c / 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>