force-app/main/default/objects/Time__c/fields/BIP__c.field-meta.xml
<CustomField>
    <fullName>BIP__c</fullName>
    <formula>IF(TEXT(Main_Activity__c)=&quot;Consulting&quot;, Registered_Time__c,
IF(TEXT(Main_Activity__c)=&quot;VTI&quot;, Registered_Time__c,
IF(TEXT(Main_Activity__c)=&quot;Year end reporting&quot;, Registered_Time__c,
IF(TEXT(Main_Activity__c)=&quot;Konsulttjänster&quot;, Registered_Time__c,
IF(TEXT(Main_Activity__c)=&quot;Bokslut och årsavslut&quot;, Registered_Time__c,
0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>