force-app/main/default/objects/Time__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment regarding registered time.</description>
    <inlineHelpText>Comment regarding registered time.</inlineHelpText>
    <label>Internal comment</label>
    <type>TextArea</type>
</CustomField>