force-app/main/default/objects/Time__c/fields/Customer_and_internal_time__c.field-meta.xml
<CustomField>
    <fullName>Customer_and_internal_time__c</fullName>
    <formula>IF( Time_Type2__c =&quot;0 Normal Time&quot;, Registered_Time__c ,
IF( Time_Type2__c =&quot;150 Overtime 150%&quot;, Registered_Time__c ,
IF( Time_Type2__c =&quot;200 Overtime 50% with time off&quot;, Registered_Time__c ,
IF( Time_Type2__c =&quot;310 Hours for time off&quot;, Registered_Time__c ,
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer and internal time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>