force-app/main/default/objects/Time__c/fields/Customer_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Time__c</fullName>
    <formula>IF(Main_Activity2__c &lt;&gt; &quot;Internal&quot;, IF(Main_Activity2__c &lt;&gt; &quot;Interntid&quot;, Registered_Time__c ,0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>