force-app/main/default/objects/Time__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Invoiced&quot;), Department_Invoiced__c, Incurred_By__r.Department)</formula>
    <inlineHelpText>From The Incurred by user</inlineHelpText>
    <label>Department</label>
    <type>Text</type>
</CustomField>