force-app/main/default/objects/Time__c/fields/Department_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Department_Invoiced__c</fullName>
    <label>Department Invoiced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>