force-app/main/default/objects/Time__c/fields/Depertment__c.field-meta.xml
<CustomField>
    <fullName>Depertment__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Invoiced&quot;), Department_Invoiced__c, Incurred_By__r.Department)</formula>
    <label>Depertment</label>
    <type>Text</type>
</CustomField>