force-app/main/default/objects/Time__c/fields/Flow_Week_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Flow_Week_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Week Checkbox</label>
    <type>Checkbox</type>
</CustomField>