force-app/main/default/objects/Time__c/fields/FTE_control__c.field-meta.xml
<CustomField>
    <fullName>FTE_control__c</fullName>
    <description>MIdltertid felt - til vi har løst automatikk på time type og varsling på godkjenn timeliste.</description>
    <formula>Case (Time_Type__c,

&quot;0 Normal time&quot;, Registered_Time__c,
&quot;311 Hours timed off&quot;, Registered_Time__c,

&quot;300&quot;, Registered_Time__c,
&quot;400&quot;, Registered_Time__c,
&quot;405&quot;, Registered_Time__c,
&quot;410&quot;, Registered_Time__c,
&quot;415&quot;, Registered_Time__c,
&quot;430&quot;, Registered_Time__c,
&quot;500&quot;, Registered_Time__c,
&quot;550&quot;, Registered_Time__c,
&quot;560&quot;, Registered_Time__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FTE Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>