force-app/main/default/objects/Time__c/fields/Gross_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Gross_Overtime__c</fullName>
    <formula>IF(Time_Type2__c = &quot;150 Overtime 150%&quot;, Registered_Time__c,
IF(Time_Type2__c = &quot;200 Overtime 50% with time off&quot;, Registered_Time__c,
IF(Time_Type2__c = &quot;310 Hours for time off&quot;, Registered_Time__c,
IF(Time_Type2__c = &quot;311 Hours timed off&quot; , (Registered_Time__c*-1),
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross_Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>