force-app/main/default/objects/Time__c/fields/Internal_time__c.field-meta.xml
<CustomField>
    <fullName>Internal_time__c</fullName>
    <formula>IF(
CONTAINS(Main_Activity2__c,&quot;Interntid&quot;) ||CONTAINS(Main_Activity2__c,&quot;Internal&quot;),
Registered_Time__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>