force-app/main/default/objects/Time__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <description>Field used by Manager Sharing Flow, not to be added to page layout.</description>
    <formula>Project_Task__r.Lock_Time_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>