force-app/main/default/objects/Time__c/fields/Main_Activity2__c.field-meta.xml
<CustomField>
    <fullName>Main_Activity2__c</fullName>
    <formula>TEXT( Main_Activity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Activity2</label>
    <type>Text</type>
</CustomField>