force-app/main/default/objects/Time__c/fields/Main_Activity__c.field-meta.xml
<CustomField>
    <fullName>Main_Activity__c</fullName>
    <label>Main Activity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Main_Activity</valueSetName>
    </valueSet>
</CustomField>