force-app/main/default/objects/Time__c/fields/Main_Price_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Main_Price_Agreement__c</fullName>
    <formula>Project_Task__r.Project__r.Account__r.Price_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Price Agreement</label>
    <type>Text</type>
</CustomField>