force-app/main/default/objects/Time__c/fields/Not_Defined_Projects__c.field-meta.xml
<CustomField>
    <fullName>Not_Defined_Projects__c</fullName>
    <formula>IF(
CONTAINS(Project_Name__c,&quot;Övrigt&quot;) ||CONTAINS(Project_Name__c,&quot;Øvrig&quot;),
Registered_Time__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Defined Projects</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>