force-app/main/default/objects/Time__c/fields/Notification_temp__c.field-meta.xml
<CustomField>
    <fullName>Notification_temp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp boolean value to sending notifications.</description>
    <label>Notification - temp</label>
    <type>Checkbox</type>
</CustomField>