force-app/main/default/objects/Time__c/fields/Overtime__c.field-meta.xml
<CustomField>
    <fullName>Overtime__c</fullName>
    <formula>IF(Time_Type2__c = &quot;305 Time for flex OB pr. 01.01&quot;, Registered_Time__c,
IF(Time_Type2__c = &quot;310 Hours for time off&quot;, Registered_Time__c,
IF(Time_Type2__c = &quot;200 Overtime 50% with time off&quot;, Registered_Time__c,

0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>