force-app/main/default/objects/Time__c/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Get checked by workflow rule if Project task i set to true on Locked Time Type checkbox. This is used by sharing rule to prevent access to other users than owner.</description>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>