force-app/main/default/objects/Time__c/fields/Project_Classification__c.field-meta.xml
<CustomField>
    <fullName>Project_Classification__c</fullName>
    <formula>Project_Task__r.Project__r.Project_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Classification</label>
    <type>Text</type>
</CustomField>