force-app/main/default/objects/Time__c/fields/Project_Country__c.field-meta.xml
<CustomField>
    <fullName>Project_Country__c</fullName>
    <label>Project Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO - Norge</fullName>
            </value>
            <value>
                <fullName>SE - Sweden</fullName>
            </value>
            <value>
                <fullName>DK - Denmark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>