force-app/main/default/objects/Time__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Task</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Project Task Status is Completed!</errorMessage>
        <filterItems>
            <field>Project_task__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_task__c</referenceTo>
    <relationshipLabel>Time</relationshipLabel>
    <relationshipName>Time</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>