force-app/main/default/objects/Time__c/fields/Project_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_Name__c</fullName>
    <description>The Name of the related Project Task</description>
    <formula>Project_Task__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Name of the related Project Task</inlineHelpText>
    <label>Project Task Name</label>
    <type>Text</type>
</CustomField>