force-app/main/default/objects/Time__c/fields/Record_Choice_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Choice_Field__c</fullName>
    <formula>&quot;Week&quot; &amp; &quot; &quot; &amp; TEXT(Week_Number__c) &amp; &quot; | &quot; &amp; Total_Hours_and_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Choice Field</label>
    <type>Text</type>
</CustomField>