force-app/main/default/objects/Time__c/fields/Registered_Hours__c.field-meta.xml
<CustomField>
    <fullName>Registered_Hours__c</fullName>
    <description>The number of Hours registered for a single project task.</description>
    <label>Registered Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>