force-app/main/default/objects/Time__c/fields/Registered_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Registered_Minutes__c</fullName>
    <description>Number of minutes registered to a particular project task.</description>
    <label>Registered Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>