force-app/main/default/objects/Time__c/fields/Registered_Time__c.field-meta.xml
<CustomField>
    <fullName>Registered_Time__c</fullName>
    <formula>Registered_Hours__c + (Registered_Minutes__c/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>