force-app/main/default/objects/Time__c/fields/Time_for_estimated_revenue__c.field-meta.xml
<CustomField>
    <fullName>Time_for_estimated_revenue__c</fullName>
    <formula>IF

(Text(Activity_Price_Agreement__c) =&quot;Hourly Rate&quot;, Billable_Time__c ,


((((Registered_Time__c)-(Billable_Time__c))*(BU__c)/100)+Billable_Time__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time for estimated revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>