force-app/main/default/objects/Time__c/fields/Time_on_Customer__c.field-meta.xml
<CustomField>
    <fullName>Time_on_Customer__c</fullName>
    <formula>Case(Main_Activity__c,

&quot;Internal&quot;, &quot;Internal&quot;,

&quot;Interntid&quot;, &quot;Internal&quot;,

&quot;India&quot;, IF((Billable_Time__c)&gt;0,&quot;Billable time India Consultants&quot;,&quot;None billable time India Consultants&quot;),

IF((Billable_Time__c)&gt;0,&quot;Billable time Consultants&quot;,&quot;None billable time Consultants&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time on Customer</label>
    <type>Text</type>
</CustomField>