force-app/main/default/objects/Time__c/fields/Time_Type2__c.field-meta.xml
<CustomField>
    <fullName>Time_Type2__c</fullName>
    <description>Field created for reporting purpose</description>
    <formula>TEXT(Time_Type__c)</formula>
    <label>Time Type</label>
    <type>Text</type>
</CustomField>