force-app/main/default/objects/Time__c/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <label>Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Time_Type</valueSetName>
    </valueSet>
</CustomField>