force-app/main/default/objects/Time__c/fields/Total_Hours_and_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_and_Minutes__c</fullName>
    <description>Used by Approve Hours Flow</description>
    <label>Total Hours and Minutes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>