force-app/main/default/objects/Time__c/fields/Used_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Used_Overtime__c</fullName>
    <formula>IF(Time_Type2__c = &quot;311 Hours timed off&quot; ,  Registered_Time__c , 
IF(Time_Type2__c = &quot;312 Hours paid&quot; ,  Registered_Time__c ,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>