force-app/main/default/objects/Time__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <formula>FLOOR((Date__c - DATE(YEAR(Date__c - WEEKDAY(Date__c -1)+4),1,3) + WEEKDAY(DATE(YEAR(Date__c - WEEKDAY(Date__c -1) + 4),1,3)) + 5)/ 7 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>