force-app/main/default/objects/Time__c/fields/Weekly_Approved_Hours_ID__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Approved_Hours_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Weekly Approved Hours ID</label>
    <referenceTo>Weekly_Approved_Hours__c</referenceTo>
    <relationshipLabel>Time</relationshipLabel>
    <relationshipName>Time</relationshipName>
    <type>Lookup</type>
</CustomField>