force-app/main/default/objects/Time__c/validationRules/Comment_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_required</fullName>
    <active>false</active>
    <description>comment required if billable hours or minutes are less than registered hours or minutes</description>
    <errorConditionFormula>( !ISPICKVAL( Activity_Price_Agreement__c , &quot;Unit Price&quot;) &amp;&amp;
!ISPICKVAL( Activity_Price_Agreement__c , &quot;Fixed Price&quot;)) &amp;&amp;
(Billable_Hours__c &lt; Registered_Hours__c ||
Billable_Minutes__c &lt; Registered_Minutes__c )
&amp;&amp;
ISBLANK(Comment__c)</errorConditionFormula>
    <errorMessage>Comment is required when billable time is not equal to registered time</errorMessage>
</ValidationRule>