force-app/main/default/objects/Time__c/validationRules/Not_less_than_15_min.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_less_than_15_min</fullName>
    <active>false</active>
    <errorConditionFormula>Billable_Hours__c = 0
&amp;&amp;
Billable_Minutes__c &lt; 15</errorConditionFormula>
    <errorDisplayField>Billable_Minutes__c</errorDisplayField>
    <errorMessage>Cannot be less than 15 minutes</errorMessage>
</ValidationRule>