force-app/main/default/objects/Time__c/validationRules/Only_edit_by_Incurred_by_user_or_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_edit_by_Incurred_by_user_or_Manager</fullName>
    <active>true</active>
    <description>00e1t000001UNCv = System Administrator</description>
    <errorConditionFormula>!ISNEW()
&amp;&amp;
$User.Id &lt;&gt; Incurred_By__c
&amp;&amp;
$User.Id &lt;&gt; Incurred_By__r.ManagerId
&amp;&amp;
$Profile.Id &lt;&gt; &quot;00e1t000001UNCv&quot;
&amp;&amp;
$Profile.Id &lt;&gt; &quot;00e1t000000RpQL&quot;</errorConditionFormula>
    <errorDisplayField>Incurred_By__c</errorDisplayField>
    <errorMessage>Time can only be edited by the user it&apos;s incurred by</errorMessage>
</ValidationRule>