force-app/main/default/objects/Time__c/validationRules/Project_task_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_task_completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),TEXT(Project_Task__r.Status__c) = &apos;Completed&apos;)</errorConditionFormula>
    <errorMessage>You cannot log hours on a Completed Project Task!</errorMessage>
</ValidationRule>