force-app/main/default/objects/Time__c/listViews/Last_Week_Logged_Hours.listView-meta.xml
<ListView>
    <fullName>Last_Week_Logged_Hours</fullName>
    <columns>NAME</columns>
    <columns>Project_Task__c</columns>
    <columns>Main_Activity__c</columns>
    <columns>Activity__c</columns>
    <columns>Registered_Time__c</columns>
    <columns>Billable_Time__c</columns>
    <columns>Description__c</columns>
    <columns>Time_Type__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Last Week Logged Hours</label>
</ListView>