force-app/main/default/objects/Time__c/listViews/My_Daily_Logged_Hours.listView-meta.xml
<ListView>
    <fullName>My_Daily_Logged_Hours</fullName>
    <columns>NAME</columns>
    <columns>Project_Task__c</columns>
    <columns>Activity__c</columns>
    <columns>Registered_Time__c</columns>
    <columns>Billable_Time__c</columns>
    <columns>Units__c</columns>
    <columns>Description__c</columns>
    <columns>Time_Type__c</columns>
    <columns>Main_Price_Agreement__c</columns>
    <columns>Activity_Price_Agreement__c</columns>
    <columns>Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Daily Logged Hours</label>
</ListView>