force-app/main/default/objects/Time__c/listViews/My_Weekly_Logged_Hours2.listView-meta.xml
<ListView>
    <fullName>My_Weekly_Logged_Hours2</fullName>
    <columns>NAME</columns>
    <columns>Project_Task__c</columns>
    <columns>Main_Activity__c</columns>
    <columns>Activity__c</columns>
    <columns>Registered_Time__c</columns>
    <columns>Billable_Time__c</columns>
    <columns>Description__c</columns>
    <columns>Time_Type__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>My Weekly Logged Hours</label>
</ListView>